fix: z-index menu

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -155,7 +155,7 @@ body {
   border: 3px solid #1a1a1a;
   background: #fefefe;
   transform: rotate(90deg);
-  z-index: 3;
+  z-index: 4;
 }
 
 .menuButton {
@@ -232,7 +232,7 @@ body {
   background: #8B7871;
   transform: translateX(-100%);
   padding: 2rem;
-  z-index: 2;
+  z-index: 3;
 
   &__header {
     @media (min-width: 1366px) {
